Issue #1892924 by sjbassett: Fix for vertical tabs form item alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,11 @@ input, textarea, select, .uneditable-input {
   width: auto;
 }
 
+/* Vertical tabs form elements alighment */
+.vertical-tabs .form-item{
+  margin: 1em 0;
+}
+
 /* Collapsible field groups fix */
 html.js fieldset.collapsed {
  height: auto;
